# sync-pad

./: CMakeLists.txt  README.md
core/: common.hpp  crc32.cpp  crc32.hpp  document.cpp  document.hpp  transport.cpp  transport.hpp
tests/: test_doc.cpp
ui_cli/: cli_main.cpp
ui_gui/: gui_main.cpp
